tests/query_errors/node_reserved_name_operator/error.txt
Error: 
    1 | define operator counter from generic::counter;
    2 | create operator metrics from counter;
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Name `metrics` is reserved for built-in nodes, please use another name.
    3 | 
    4 | select event from in into metrics;